add active pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,14 +25,8 @@
     </header>
 
     <main class="px-3">
-      <a href="https://www.qries.com/">
-         <img alt="Qries" src="https://github.com/AlexKay28/langflow/blob/main/media/logo.png?raw=true" width="300" height="300">
-      </a>
-      <h5>main page</h5>
+      {% block central_pic %}{% endblock %}
       <p class="lead">{% block body %}{% endblock %}</p>
-      <p class="lead">
-        <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
-      </p>
     </main>
 
     <footer class="mt-auto text-white-50">
