--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,30 @@
 LangFlow
 {% endblock %}
 
+{% block central_pic %}
+  <a href="https://www.qries.com/">
+     <img alt="Qries" src="https://avatars.githubusercontent.com/u/55444371?v=4" width="400" height="400">
+  </a>
+  <br><br><br>
+  <div class="text-block">
+    <h4><i>
+    - "The project for the most brutal and effective language learning technique" (c) Alex Kay
+    <br><br>
+    <br>
+    <a href="https://www.qries.com/">
+      <img alt="Qries" src="https://github.com/AlexKay28/langflow/blob/main/media/logo.png?raw=true" width="300" height="300">
+    </a>
+    <br>
+    The langflow project was created especially for language learning by using the most direct way. A method demands to work passionately and regularly. The main idea of the method is constant recall by students writing sentences in language which he would like to improve!
+
+    The natural way of learning by this technique reminds reinforcement learning which became one the most effective ways in ML. Just make the parallel between these both and find this as a way of learning if it is convenient for you!
+    </i></h4> <!-- Ce texte va etre italic -->
+  </div>
+{% endblock %}
+
 {% block body %}
-<h1>Message sended by LangFlow</h1>
+  <br><br>
+  <form method="post">
+    <input type="submit" class="btn btn-success" value="Go practice!">
+  </form>
 {% endblock %}
