--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@ LangFlow
     <br>
     The langflow project was created especially for language learning by using the most direct way. A method demands to work passionately and regularly. The main idea of the method is constant recall by students writing sentences in language which he would like to improve!
 
-    The natural way of learning by this technique reminds reinforcement learning which became one the most effective ways in ML. Just make the parallel between these both and find this as a way of learning if it is convenient for you!
+    The natural way of learning by this technique reminds supervised learning which became one the most effective ways in ML. Just make the parallel between these both and find this as a way of learning if it is convenient for you!
     </i></h4> <!-- Ce texte va etre italic -->
   </div>
 {% endblock %}
