add None checker and build convenient controller for session (#11)

--- a/templates/practice_answer.html
+++ b/templates/practice_answer.html
@@ -12,9 +12,9 @@ LangFlowHome
 {% endblock %}
 
 {% block body %}
-  <h2>Translate: {{first_language}}</h2>
-  <h2>Answer: {{second_language_answer}}</h2>
-  <h2>Correct answer: {{second_language}}</h2>
+  <h2>Translate: {{first_language_phrase}}</h2>
+  <h2>Answer: {{second_language_phrase_answer}}</h2>
+  <h2>Correct answer: {{second_language_phrase}}</h2>
 
   <form method="get">
     <input type="submit" class="btn btn-success" value="next">
