add transitions using ENTER and add autocursore on input (#14)
Co-authored-by: maxim <m.alkhimov@fairtech.ru>

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,6 @@ LangFlow
 {% block body %}
   <br><br>
   <form method="post">
-    <input type="submit" class="btn btn-success" value="Go practice!">
+    <button class="btn btn-success" value="Go practice!" id="next_button" >Go practice!</button>
   </form>
 {% endblock %}
