--- a/templates/practice_answer.html
+++ b/templates/practice_answer.html
@@ -17,6 +17,6 @@ LangFlowHome
   <h2>Correct answer: {{second_language_phrase}}</h2>
 
   <form method="get">
-    <input type="submit" class="btn btn-success" value="next">
+    <button class="btn btn-success" value="Next"  id="next_button" >Next</button>
   </form>
 {% endblock %}
