--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -9,9 +9,8 @@
   <link rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
   <title>{% block title %}{% endblock %}</title>
 </head>
-<body
-  <body class="d-flex h-100 text-center text-white bg-dark" data-new-gr-c-s-check-loaded="14.1029.0" data-gr-ext-installed="">
 
+<body class="d-flex h-100 text-center text-white bg-dark" data-new-gr-c-s-check-loaded="14.1029.0" data-gr-ext-installed="">
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="mb-auto">
       <div>
@@ -33,6 +32,8 @@
       <p>Service created by <a href="https://github.com/AlexKay28" class="text-white">AlexKay</a>.</p>
     </footer>
   </div>
-  <div id="rememberry__extension__root" style="all: unset;"></div></body>
+  <div id="rememberry__extension__root" style="all: unset;"></div>
+
+  <script src="/static/js/scripts.js"></script>
 </body>
 </html>
