--- a/templates/practice_ask.html
+++ b/templates/practice_ask.html
@@ -1,19 +1,13 @@
 {% extends 'base.html' %}
 
-{% block title %}
-LangFlowHome
-{% endblock %}
-
-{% block central_pic %}
-<a href="https://www.qries.com/">
-   <img alt="Qries" src="https://github.com/AlexKay28/langflow/blob/main/media/logo.png?raw=true" width="300" height="300">
-</a>
-<h5>main page ask</h5>
-{% endblock %}
-
 {% block body %}
+<div class="centered-element">
   <h2>Translate: {{first_language_phrase}}</h2>
   <form action="/practice" method="post">
-    <input type="string" name="second_language_phrase_answer" autofocus>
+    <input type="string" name="second_language_phrase_answer" class="form-control" placeholder="Enter text" autocomplete="off" autofocus>
   </form>
+</div>
+<footer class="pb-4 text-white-50 fixed-bottom-element">
+  <p>Service created by <a href="https://github.com/AlexKay28" class="text-white">AlexKay</a> and <a href="https://github.com/Alkhimovmv" class="text-white">AlkhimovMV</a>.</p>
+</footer>
 {% endblock %}
