--- a/templates/base.html
+++ b/templates/base.html
@@ -2,37 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content=width=device-width, initial-scale=no, initial-scale=1.0>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-  <link rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/css/custom.css">
   <title>{% block title %}{% endblock %}</title>
 </head>
-
-<body class="d-flex h-100 text-center text-white bg-dark" data-new-gr-c-s-check-loaded="14.1029.0" data-gr-ext-installed="">
-  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-    <header class="mb-auto">
-      <div>
-        <h3 class="float-md-start mb-0">LangFlow</h3>
-        <nav class="nav nav-masthead justify-content-center float-md-end">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-          <a class="nav-link" href="/">Features</a>
-          <a class="nav-link" href="/">Contact</a>
-        </nav>
-      </div>
-    </header>
-
-    <main class="px-3">
-      {% block central_pic %}{% endblock %}
-      <p class="lead">{% block body %}{% endblock %}</p>
-    </main>
-
-    <footer class="mt-auto text-white-50">
-      <p>Service created by <a href="https://github.com/AlexKay28" class="text-white">AlexKay</a>.</p>
-    </footer>
+<body class="h-100 text-center text-white bg-dark">
+  <nav class="container navbar fixed-top navbar-expand justify-content-between navbar-dark bg-dark px-4">
+    <a class="navbar-brand logo" href="/"></a>
+    <div class="navbar-collapse">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item"></li>
+          <a class="nav-link" href="https://github.com/AlexKay28/langflow">Github</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container-lg d-flex w-100 h-100 mx-auto flex-column base-container">
+    {% block our_team %}{% endblock %}
+    {% block about_project %}{% endblock %}
+    {% block body %}{% endblock %}
   </div>
-  <div id="rememberry__extension__root" style="all: unset;"></div>
 
   <script src="/static/js/scripts.js"></script>
 </body>
