--- a/templates/index.html
+++ b/templates/index.html
@@ -1,33 +1,71 @@
 {% extends 'base.html' %}
 
-{% block title %}
-LangFlow
+{% block our_team %}
+<div class="py-5 team4">
+  <div class="container">
+    <div class="row justify-content-center mb-4">
+      <div class="col-md-7 text-center">
+        <h1 class="mb-3">Experienced & Professional Team</h3>
+      </div>
+    </div>
+    <div class="row">
+      <!-- column  -->
+      <div class="col-lg-4 mb-4">
+        <!-- Row -->
+        <div class="row">
+          <div class="col-md-12">
+            <img src="https://avatars.githubusercontent.com/u/55444371?v=4" alt="AlexKay avatar" class="img-fluid rounded-circle" />
+          </div>
+          <div class="col-md-12 text-center">
+            <div class="pt-2">
+              <h5 class="mt-4 font-weight-medium mb-0">Alexander Kaigorodov</h5>
+              <h6 class="subtitle mb-3">DS / MLOps / NLP engineer</h6>
+              <p>The project for the most brutal and effective language learning technique.</p>
+            </div>
+          </div>
+        </div>
+        <!-- Row -->
+      </div>
+      <!-- column  -->
+      <!-- column  -->
+      <div class="col-lg-4 mb-4">
+        <!-- Row -->
+        <div class="row">
+          <div class="col-md-12">
+            <img src="https://avatars.githubusercontent.com/u/61086417?v=4" alt="Alkhimovmv avatar" class="img-fluid rounded-circle" />
+          </div>
+          <div class="col-md-12 text-center">
+            <div class="pt-2">
+              <h5 class="mt-4 font-weight-medium mb-0">Maxim Alkhimov</h5>
+              <h6 class="subtitle mb-3">Frontend Developer</h6>
+              <p>A year from now you will wish you had started to learn a language today.</p>
+            </div>
+          </div>
+        </div>
+        <!-- Row -->
+      </div>
+      <!-- column  -->
+    </div>
+  </div>
+</div>
 {% endblock %}
 
-{% block central_pic %}
-  <a href="https://www.qries.com/">
-     <img alt="Qries" src="https://avatars.githubusercontent.com/u/55444371?v=4" width="400" height="400">
-  </a>
-  <br><br><br>
-  <div class="text-block">
-    <h4><i>
-    - "The project for the most brutal and effective language learning technique" (c) Alex Kay
-    <br><br>
-    <br>
-    <a href="https://www.qries.com/">
-      <img alt="Qries" src="https://github.com/AlexKay28/langflow/blob/main/media/logo.png?raw=true" width="300" height="300">
-    </a>
-    <br>
-    The langflow project was created especially for language learning by using the most direct way. A method demands to work passionately and regularly. The main idea of the method is constant recall by students writing sentences in language which he would like to improve!
-
-    The natural way of learning by this technique reminds supervised learning which became one the most effective ways in ML. Just make the parallel between these both and find this as a way of learning if it is convenient for you!
-    </i></h4> <!-- Ce texte va etre italic -->
+{% block about_project %}
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-7 text-center">
+      <h1 class="mb-3">About project</h3>
+    </div>
   </div>
+  <h4><i>The langflow project was created especially for language learning by using the most direct way. A method demands to work passionately and regularly. The main idea of the method is constant recall by students writing sentences in language which he would like to improve! The natural way of learning by this technique reminds supervised learning which became one the most effective ways in ML. Just make the parallel between these both and find this as a way of learning if it is convenient for you!</i></h3>
+</div>
 {% endblock %}
 
 {% block body %}
-  <br><br>
-  <form method="post">
-    <button class="btn btn-success" value="Go practice!" id="next_button" >Go practice!</button>
-  </form>
+<form method="post" class="my-5">
+  <button class="btn btn-success btn-largest" value="Go practice!" id="next_button" >Go practice!</button>
+</form>
+<footer class="text-white-50">
+  <p>Service created by <a href="https://github.com/AlexKay28" class="text-white">AlexKay</a> and <a href="https://github.com/Alkhimovmv" class="text-white">AlkhimovMV</a>.</p>
+</footer>
 {% endblock %}
