--- a/langflow/templates/index.html
+++ b/langflow/templates/index.html
@@ -14,7 +14,7 @@
         <!-- Row -->
         <div class="row">
           <div class="col-md-12">
-            <img src="https://avatars.githubusercontent.com/u/55444371?v=4" alt="AlexKay avatar" class="img-fluid rounded-circle" />
+            <img src="../static/media/avatar_Alexkay.png" alt="AlexKay avatar" class="img-fluid rounded-circle" />
           </div>
           <div class="col-md-12 text-center">
             <div class="pt-2">
@@ -32,7 +32,7 @@
         <!-- Row -->
         <div class="row">
           <div class="col-md-12">
-            <img src="https://avatars.githubusercontent.com/u/61086417?v=4" alt="Alkhimovmv avatar" class="img-fluid rounded-circle" />
+            <img src="../static/media/avatar_AlkhimoyMV.png" alt="Alkhimovmv avatar" class="img-fluid rounded-circle" />
           </div>
           <div class="col-md-12 text-center">
             <div class="pt-2">
