--- a/langflow/templates/practice_ask.html
+++ b/langflow/templates/practice_ask.html
@@ -4,7 +4,7 @@
 <div class="centered-element">
   <h2>Translate: {{first_language_phrase}}</h2>
   <form action="/practice" method="post">
-    <input type="string" name="second_language_phrase_answer" class="form-control" placeholder="Enter text" autocomplete="off" autofocus>
+    <input type="string" name="second_language_phrase_answer" class="form-control" placeholder="Enter text" autocomplete="off">
   </form>
 </div>
 <footer class="pb-4 text-white-50 fixed-bottom-element">
