--- a/frontend/src/components/Question/question.scss
+++ b/frontend/src/components/Question/question.scss
@@ -11,6 +11,10 @@
   margin: 0 auto;
 }
 
+.question {
+  color: #023866;
+}
+
 .table-header {
   font-size: 32px;
   text-align: end;
@@ -24,10 +28,6 @@
 
 .table-text_translate {
   color: orange;
-}
-
-.table-text_answer {
-  color: white;
 }
 
 .table-text_correct-answer {
