--- a/frontend/src/components/Question/question.scss
+++ b/frontend/src/components/Question/question.scss
@@ -1,60 +1,10 @@
-.centered-element {
-    position: fixed;
-    width: max-content;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
-
-.custom-table {
-  margin: 0 auto;
-}
-
 .question {
-  color: #023866;
-}
-
-.table-header {
-  font-size: 32px;
-  text-align: end;
-  padding-right: 5px;
-}
-
-.table-text {
-  font-size: 32px;
   text-align: start;
-}
+  margin-left: 13px;
+  color: #023866;
 
-.table-text_translate {
-  color: orange;
-}
-
-.table-text_correct-answer {
-  color: green;
-}
-
-@media screen and (max-width: 768px) {
-  .table-header {
-    font-size: 24px;
-  }
-  
-  .table-text {
-    font-size: 24px;
-  }
-
-  .form-control {
-    width: 309px;
+  &_container {
     margin: 0 auto;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .table-header {
-    font-size: 18px;
-  }
-  
-  .table-text {
-    font-size: 18px;
+    width: 704px;
   }
 }
